Updating Old File for core commit

--- a/c-legacy-releases/2022/08172022.md
+++ b/c-legacy-releases/2022/08172022.md
@@ -1,12 +1,12 @@
 ---
 title: 版本注意事項 - 2022 年 8 月
-description: 了解  [!DNL Experience Cloud]  產品和服務的最新版本注意事項、新功能和新文件。尋找有關  [!DNL Experience Cloud]、 [!DNL Creative Cloud for enterprise] 和  [!DNL Document Cloud] 最新的說明與教學課程。
+description: 瞭解  [!DNL Experience Cloud]  產品和服務的最新版本注意事項、新功能和新文件。尋找有關  [!DNL Experience Cloud]、 [!DNL Creative Cloud for enterprise] 和  [!DNL Document Cloud] 最新的說明與教學課程。
 doc-type: release notes
 last-update: August 2022
 author: mfrei
 mini-toc-levels: 2
 source-git-commit: 239bfea2a9ad64d6354025ed75906bc929a8605b
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '4151'
 ht-degree: 100%
 
@@ -20,7 +20,7 @@ ht-degree: 100%
 
 >[!NOTE]
 >
->若要收到關於本頁更新的每月電子郵件通知，請訂閱 [Adobe 優先產品更新](https://www.adobe.com/tw/subscription/priority-product-update.html)。請經常回來查看，持續了解 Experience League 最新消息。
+>若要收到關於本頁更新的每月電子郵件通知，請訂閱 [Adobe 優先產品更新](https://www.adobe.com/tw/subscription/priority-product-update.html)。請經常回來查看，持續瞭解 Experience League 最新消息。
 
 上次更新日期：**2022 年 8 月 23 日**
 
@@ -46,7 +46,7 @@ ht-degree: 100%
 * [[!DNL Adobe Creative Cloud for enterprise]](#creative-cloud)
 * [數位體驗藍圖 - 教學課程](#blueprints)
 
-需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群見解，以及由講師授課的訓練課程。
+需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/#home)，瞭解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群見解，以及由講師授課的訓練課程。
 
 ## ![圖示](/assets/experience-league.png) [!DNL Experience League] 活動 {#events}
 
@@ -56,12 +56,12 @@ ht-degree: 100%
 
 | 活動 | 類型 | 說明 |
 | -----------|---------- | ----|
-| [Adobe Analytics](https://engage.adobe.com/NA_FY22_Q3_WBR_Adobe_Analytics_Data_Validation.html) | 網路研討會 | _加速明日成功：資料品質和採用_ - 在這場直播網路研討會中加入 Adobe Analytics Champions Frederik Werner 和 Sarah Owen 的行列，了解如何將資料品質融入每個分析成面並打造分享文化。<p>**日期：** 8 月 25 日上午 11 點 (太平洋標準時間) - [詳細資料和報名](https://engage.adobe.com/NA_FY22_Q3_WBR_Adobe_Analytics_Data_Validation.html) |
-| [Experience Makers Live](https://business.adobe.com/events/experience-makers-live.html) | 網路研討會 | 免費的 Experience Makers 活動，將由 Sara Blakely、Peyton Manning 和 Eli Manning 進行專題演講。<p>**日期：** 9 月 13 日 - 14 日 - [詳細資料和報名](https://business.adobe.com/events/experience-makers-live.html) |
+| [Adobe Analytics](https://engage.adobe.com/NA_FY22_Q3_WBR_Adobe_Analytics_Data_Validation.html) | 網路研討會 | _加速明日成功：資料品質和採用_ - 在這場直播網路研討會中加入 Adobe Analytics Champions Frederik Werner 和 Sarah Owen 的行列，瞭解如何將資料品質融入每個分析成面並打造分享文化。<p>**日期：** 8 月 25 日上午 11 點 (太平洋標準時間) - [詳細資料和報名](https://engage.adobe.com/NA_FY22_Q3_WBR_Adobe_Analytics_Data_Validation.html) |
+| [Experience Makers Live](https://business.adobe.com/events/experience-makers-live.html) | 網路研討會 | 免費的 Experience Makers 活動，將由 Sara Blakely、Peyton Manning 和 Eli Manning 進行專題演講。<p>**日期：** 9 月 13 日至 14 日 - [詳細資料和報名](https://business.adobe.com/events/experience-makers-live.html) |
 
 {style=&quot;table-layout:auto&quot;}
 
-請查看 Experience League 上的[活動](https://experienceleague.adobe.com/events/?lang=en)，以掌握即將舉辦的活動和過去集數的最新消息。
+請查看 Experience League 上的[活動](https://experienceleague.adobe.com/events/?lang=zh-Hant)，以掌握即將舉辦的活動和過去集數的最新消息。
 
 ## ![圖示](/assets/system-status.png) [!DNL Adobe System Status] {#status}
 
@@ -112,7 +112,7 @@ Experience Cloud [中央介面元件](https://experienceleague.adobe.com/docs/co
 
 | 已發佈 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2022 年 8 月 | [建立流失視覺效果報告](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/analyzing-customer-journeys/fallout-visualization.html?lang=zh-Hant) | 影片 | 了解流失報告使用案例以及如何在 Analysis Workspace 中設定此報告。 |
+| 2022 年 8 月 | [建立流失視覺效果報告](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/analyzing-customer-journeys/fallout-visualization.html?lang=zh-Hant) | 影片 | 瞭解流失報告使用案例以及如何在 Analysis Workspace 中設定此報告。 |
 
 {style=&quot;table-layout:auto&quot;}
 
@@ -150,7 +150,7 @@ Adobe 建議您造訪 [Experience Manager 版本更新與藍圖](https://experie
 
 ### 產品更新影片
 
-觀看 [2022 年 7 月版本概觀影片](https://video.tv.adobe.com/v/345409/?quality=12)，以了解 2022.7.0 (2022 年 7 月) 版本新增的功能摘要。<!-- Beginning with the video this month, Adobe has enabled localized closed captioning in French (FR), German (DE) and Japanese (JP). -->
+觀看 [2022 年 7 月版本概觀影片](https://video.tv.adobe.com/v/345409/?quality=12)，以瞭解 2022.7.0 (2022 年 7 月) 版本新增的功能摘要。<!-- Beginning with the video this month, Adobe has enabled localized closed captioning in French (FR), German (DE) and Japanese (JP). -->
 
 * [2022 年 6 月版本概觀影片](https://video.tv.adobe.com/v/344308/?quality=12)
 * [2022 年 5 月版本概觀影片](https://video.tv.adobe.com/v/343321/?quality=12)
@@ -234,9 +234,9 @@ _新功能_
 
 | 已發佈 | 名稱 | 類型 | 說明 | 應用程式 |
 | -----------| ---------- | ---------- | ---------- | ------|
-| 2022 年 8 月 | [AEM as a Cloud Service 2022.7.0 版本更新](https://experienceleague.adobe.com/docs/experience-manager-release-overview-events/aemcsupdates/2022/2022-7-0.html) | 影片 | 聆聽 AEM 產品團隊的心得，並了解最新版 Adobe Experience Manager Assets、Assets Essentials、Sites、Commerce Integration Framework、Forms 和 Cloud Manager 的功能和創新。 | AEM as a Cloud Service |
-| 2022 年 8 月 | [AEM Headless 教學課程](https://experienceleague.adobe.com/docs/experience-manager-learn/getting-started-with-aem-headless/overview.html?lang=zh-Hant) | 更新文章 | AEM 無周邊 SDK 教學課程已更新使用持續查詢和 WKND 2.0。請透過動手操作教學課程，探索如何使用各種選項並選擇合適的選項。 | AEMas a Cloud Service |
-| 2022 年 8 月 | [AEM as a Cloud Service 整合 Adobe Experience Cloud](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/integrations.html) | 影片 | 了解 AEM as a Cloud Service 已支援整合其他 Adobe Experience Cloud 產品。 | AEM CS, Experience Cloud |
+| 2022 年 8 月 | [AEM as a Cloud Service 2022.7.0 版本更新](https://experienceleague.adobe.com/docs/experience-manager-release-overview-events/aemcsupdates/2022/2022-7-0.html) | 影片 | 聆聽 AEM 產品團隊的心得，並瞭解最新版 Adobe Experience Manager Assets、Assets Essentials、Sites、Commerce Integration Framework、Forms 和 Cloud Manager 的功能和創新。 | AEM as a Cloud Service |
+| 2022 年 8 月 | [AEM Headless 教學課程](https://experienceleague.adobe.com/docs/experience-manager-learn/getting-started-with-aem-headless/overview.html?lang=zh-Hant) | 更新文章 | AEM 無周邊 SDK 教學課程已更新使用持續查詢和 WKND 2.0。請透過動手操作教學課程，探索如何使用各種選項並選擇合適的選項。 | AEM as a Cloud Service |
+| 2022 年 8 月 | [AEM as a Cloud Service 整合 Adobe Experience Cloud](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/integrations.html) | 影片 | 瞭解 AEM as a Cloud Service 已支援整合其他 Adobe Experience Cloud 產品。 | AEM CS, Experience Cloud |
 | 2022 年 8 月 | [Forms CS 和 Microsoft® Power Automate](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/forms/forms-cs-and-power-automate/integrate-formscs-power-automate.html) | 影片 | 在最適化表格提交時叫用您的電源自動化流程。 | AEM Forms |
 
 {style=&quot;table-layout:auto&quot;}
@@ -265,7 +265,7 @@ _新功能_
 * [Experience Manager 6.4 學習與支援首頁](https://experienceleague.adobe.com/docs/experience-manager-64.html?lang=zh-Hant)
 * [Experience Manager 6.3 學習與支援首頁](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/previous-updates/aem-previous-versions.html?lang=zh-Hant)
 * [Experience Manager 6.2 學習與支援首頁](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/previous-updates/aem-previous-versions.html?lang=zh-Hant#previous-updates)
-* [舊版 Experience Manager 文件](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/previous-updates/aem-previous-versions.html?lang=en#previous-updates)
+* [舊版 Experience Manager 文件](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/previous-updates/aem-previous-versions.html?lang=zh-Hant#previous-updates)
 * [Dynamic Media Classic 說明首頁](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/home.html?lang=zh-Hant)
 * [Experience Manager 文件：最近更新](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/doc-updates/documentation-updates.html?lang=zh-Hant#aem-as-a-cloud-service)
 
@@ -273,7 +273,7 @@ _新功能_
 
 [!DNL Experience Manager Guides] 是部署至 AEM 的應用程式。這是一個功能強大、企業級元件內容管理解決方案 (CCMS)；此解決方案啟用 Adobe Experience Manager 的原生 DITA 支援，使 AEM 能夠處理以 DITA 為主的內容建立和傳遞。
 
-進一步了解 [[!DNL Experience Manager Guides]](https://www.adobe.com/tw/products/xml-documentation-for-experience-manager/features.html)。
+進一步瞭解 [[!DNL Experience Manager Guides]](https://www.adobe.com/tw/products/xml-documentation-for-experience-manager/features.html)。
 
 ### 其他資源
 
@@ -291,9 +291,9 @@ _新功能_
 
 | 已發佈 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2022 年 8 月 | [Adobe Commerce 內容和設計手冊](https://experienceleague.adobe.com/docs/commerce-admin/content-design/guide-overview.html) | 產品文件 | 造訪新產品文件首頁，以了解 Adobe Commerce 內容和設計。 |
-| 2022 年 8 月 | [目錄服務指南概觀](https://experienceleague.adobe.com/docs/commerce-merchant-services/catalog-service/guide-overview.html) | 產品文件 | 取得[!UICONTROL 目錄服務]的簡介。了解如何上線和安裝。 |
-| 2022 年 8 月 | [適用於 Adobe Commerce 的 Quick Checkout](https://experienceleague.adobe.com/docs/commerce-merchant-services/quick-checkout/overview.html) | 產品文件 | 了解 Adobe Commerce 的一般簽出體驗，以及 Quick Checkout 如何帶來效益和要在該旅程中遵循的最佳實務概觀。 |
+| 2022 年 8 月 | [Adobe Commerce 內容和設計手冊](https://experienceleague.adobe.com/docs/commerce-admin/content-design/guide-overview.html) | 產品文件 | 造訪新產品文件首頁，以瞭解 Adobe Commerce 內容和設計。 |
+| 2022 年 8 月 | [目錄服務指南概觀](https://experienceleague.adobe.com/docs/commerce-merchant-services/catalog-service/guide-overview.html) | 產品文件 | 取得[!UICONTROL 目錄服務]的簡介。瞭解如何上線和安裝。 |
+| 2022 年 8 月 | [適用於 Adobe Commerce 的 Quick Checkout](https://experienceleague.adobe.com/docs/commerce-merchant-services/quick-checkout/overview.html) | 產品文件 | 瞭解 Adobe Commerce 的一般簽出體驗，以及 Quick Checkout 如何帶來效益和要在該旅程中遵循的最佳實務概觀。 |
 
 {style=&quot;table-layout:auto&quot;}
 
@@ -342,9 +342,9 @@ New videos, tutorials, or courses published for Adobe Campaign.
 ### Campaign 說明資源
 
 * Adobe Campaign v8：[文件](https://experienceleague.adobe.com/docs/campaign/campaign-v8/campaign-home.html?lang=zh-Hant) - [版本注意事項](https://experienceleague.adobe.com/docs/campaign/campaign-v8/new/whats-new.html?lang=zh-Hant) - [實作指南](https://experienceleague.adobe.com/docs/campaign/campaign-v8/implement/implement.html?lang=zh-Hant)
-* Adobe Campaign Standard：[Campaign Standard 文件](https://experienceleague.adobe.com/docs/campaign-standard/using/campaign-standard-home.html?lang=zh-Hant) - [版本注意事項](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html) - [操作說明影片](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/overview.html?lang=zh-Hant) - [發行規劃](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-planning.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/docs/campaign-standard/using/documentation-updates.html?lang=zh-Hant)
+* Adobe Campaign Standard：[Campaign Standard 文件](https://experienceleague.adobe.com/docs/campaign-standard/using/campaign-standard-home.html?lang=zh-Hant) - [版本注意事項](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html?lang=zh-Hant) - [操作說明影片](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/overview.html?lang=zh-Hant) - [發行規劃](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-planning.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/docs/campaign-standard/using/documentation-updates.html?lang=zh-Hant)
 * Adobe Campaign Classic：[Campaign Classic v7 文件](https://experienceleague.adobe.com/docs/campaign-classic/using/campaign-classic-home.html?lang=zh-Hant) - [版本注意事項](https://experienceleague.adobe.com/docs/campaign-classic/using/release-notes/latest-release.html?lang=zh-Hant) - [操作說明影片](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/overview.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/docs/campaign-classic/using/documentation-updates.html?lang=zh-Hant)
-* Adobe Campaign 控制面板：[文件](https://experienceleague.adobe.com/docs/control-panel/using/control-panel-home.html?lang=zh-Hant) - [版本注意事項](https://experienceleague.adobe.com/docs/control-panel/using/release-notes/release-notes.html?lang=en) - [做法影片](https://experienceleague.adobe.com/docs/control-panel-learn/control-panel/control-panel-overview.html?lang=zh-Hant)的做法影片
+* Adobe Campaign 控制面板：[文件](https://experienceleague.adobe.com/docs/control-panel/using/control-panel-home.html?lang=zh-Hant) - [版本注意事項](https://experienceleague.adobe.com/docs/control-panel/using/release-notes/release-notes.html?lang=zh-Hant) - [做法影片](https://experienceleague.adobe.com/docs/control-panel-learn/control-panel/control-panel-overview.html?lang=zh-Hant)的做法影片
 
 ## ![圖示](/assets/experience_platform_appicon_24.png) Adobe Journey Optimizer {#journey-opt}
 
@@ -352,7 +352,7 @@ New videos, tutorials, or courses published for Adobe Campaign.
 
 ### 最新 Journey Optimizer 產品版本
 
-進一步了解 [Journey Optimizer 版本注意事項](https://experienceleague.adobe.com/docs/journey-optimizer/using/whats-new/release-notes.html?lang=zh-Hant)中最新功能、改進功能和修正。
+進一步瞭解 [Journey Optimizer 版本注意事項](https://experienceleague.adobe.com/docs/journey-optimizer/using/whats-new/release-notes.html?lang=zh-Hant)中最新功能、改進功能和修正。
 
 <!-- ### New Journey Optimizer tutorials and courses {#tutorials-ajo}
 
@@ -369,7 +369,7 @@ New videos, tutorials, or courses published for Adobe Journey Optimizer.
 ### [!DNL Journey Optimizer] 的更多資源
 
 * [Journey Optimizer 文件](https://experienceleague.adobe.com/docs/journey-optimizer/using/ajo-home.html?lang=zh-Hant) - [版本注意事項](https://experienceleague.adobe.com/docs/journey-optimizer/using/whats-new/release-notes.html?lang=zh-Hant) - [操作說明影片](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/overview.html?lang=zh-Hant)
-* [決策管理文件](https://experienceleague.adobe.com/docs/journey-optimizer/using/offer-decisioning/get-started-decision/starting-offer-decisioning.html) - [版本注意事項](https://experienceleague.adobe.com/docs/journey-optimizer/using/whats-new/release-notes.html) - [操作說明影片](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/decision-management/introduction-to-decision-management.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/docs/journey-optimizer/using/whats-new/documentation-updates.html?lang=zh-Hant)
+* [決策管理文件](https://experienceleague.adobe.com/docs/journey-optimizer/using/offer-decisioning/get-started-decision/starting-offer-decisioning.html) - [版本注意事項](https://experienceleague.adobe.com/docs/journey-optimizer/using/whats-new/release-notes.html?lang=zh-Hant) - [操作說明影片](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/decision-management/introduction-to-decision-management.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/docs/journey-optimizer/using/whats-new/documentation-updates.html?lang=zh-Hant)
 
 ## ![圖示](/assets/experience_platform_appicon_24.png) [!DNL Adobe Journey Orchestration] {#journey-orch}
 
@@ -377,11 +377,11 @@ New videos, tutorials, or courses published for Adobe Journey Optimizer.
 
 ### 最新 [!DNL Journey Orchestration] 產品版本
 
-進一步了解 [[!DNL Journey Orchestration]  版本注意事項](https://experienceleague.adobe.com/docs/journeys/using/release-notes/release-notes.html?lang=zh-Hant)中最新功能、改進功能和修正。
+進一步瞭解 [[!DNL Journey Orchestration]  版本注意事項](https://experienceleague.adobe.com/docs/journeys/using/release-notes/release-notes.html?lang=zh-Hant)中最新功能、改進功能和修正。
 
 #### [!DNL Journey Orchestration] 的更多資源
 
-* [Journey Orchestration 文件](https://experienceleague.adobe.com/docs/journeys/using/journey-orchestration-home.html?lang=zh-Hant) - [版本注意事項](https://experienceleague.adobe.com/docs/journeys/using/release-notes/release-notes.html) - [操作說明影片](https://experienceleague.adobe.com/docs/journey-orchestration-learn/tutorials/understanding-journey-orchestration.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/docs/journeys/using/release-notes/documentation-updates.html?lang=zh-Hant)
+* [Journey Orchestration 文件](https://experienceleague.adobe.com/docs/journeys/using/journey-orchestration-home.html?lang=zh-Hant) - [版本注意事項](https://experienceleague.adobe.com/docs/journeys/using/release-notes/release-notes.html?lang=zh-Hant) - [操作說明影片](https://experienceleague.adobe.com/docs/journey-orchestration-learn/tutorials/understanding-journey-orchestration.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/docs/journeys/using/release-notes/documentation-updates.html?lang=zh-Hant)
 
 ## ![圖示](/assets/marketo.png) [!DNL Adobe Marketo Engage] {#marketo}
 
@@ -397,7 +397,7 @@ New videos, tutorials, or courses published for Adobe Journey Optimizer.
 
 | 已發佈 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2022 年 8 月 | [Marketo Engage 教學課程](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/overview.html?lang=zh-Hant) | 影片 | 如需 Marketo Engage 所有過去和最新的教學課程，請造訪 [Marketo Engage 教學課程首頁](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/overview.html?lang=en)。 |
+| 2022 年 8 月 | [Marketo Engage 教學課程](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/overview.html?lang=zh-Hant) | 影片 | 如需 Marketo Engage 所有過去和最新的教學課程，請造訪 [Marketo Engage 教學課程首頁](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/overview.html?lang=zh-Hant)。 |
 
 {style=&quot;table-layout:auto&quot;}
 
@@ -416,21 +416,21 @@ Experience League 最新的 Workfront 課程與教學課程。
 | 已發佈 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2022 年 8 月 | [Workfront 教學課程](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/home.html?lang=zh-Hant) | 教學課程首頁 | 造訪 Experience League 最新的 Workfront 教學課程首頁。 |
-| 2022 年 8 月 | [開始使用適用於系統管理員的 Workfront](https://experienceleague.adobe.com/?recommended=Workfront-A-1-2022.1.admin) | 課程 | 了解設定使用者並透過系統設定最佳化使用者體驗的前幾個階段。 |
-| 2022 年 8 月 | [精進 Workfront 管理員的系統設定知識](https://experienceleague.adobe.com/?recommended=Workfront-A-1-2022.2.admin) | 課程 | 了解更多關於系統設定的資訊，以增強您的使用者體驗，包括使用者組織、自訂表單、核准程序和里程碑，以及版面配置範本。 |
+| 2022 年 8 月 | [開始使用適用於系統管理員的 Workfront](https://experienceleague.adobe.com/?recommended=Workfront-A-1-2022.1.admin) | 課程 | 瞭解設定使用者並透過系統設定最佳化使用者體驗的前幾個階段。 |
+| 2022 年 8 月 | [精進 Workfront 管理員的系統設定知識](https://experienceleague.adobe.com/?recommended=Workfront-A-1-2022.2.admin) | 課程 | 瞭解更多關於系統設定的資訊，以增強您的使用者體驗，包括使用者組織、自訂表單、核准程序和里程碑，以及版面配置範本。 |
 | 2022 年 8 月 | [開始使用適用於計劃者的 Workfront](https://experienceleague.adobe.com/?recommended=Workfront-U-1-2022.1.planners) | 課程 | 學習如何建立和規劃專案，開始進行 Workfront 歷程。Workfront 會提出讓事情變簡單的建議。 |
-| 2022 年 8 月 | [管理和關閉專案](https://experienceleague.adobe.com/?recommended=Workfront-U-1-2022.2.planners) | 課程 | 現在您已了解如何建立並規劃專案，我們可以開始了解如何管理和關閉專案。 |
-| 2022 年 8 月 | [精進對於作為計劃者管理管理工作的認識 ](https://experienceleague.adobe.com/?recommended=Workfront-U-1-2022.3.planners) | 課程 | 您已了解建立、規劃和管理專案的基礎知識後，還有一些事情您應知道，以充分利用您的 Workfront。 |
+| 2022 年 8 月 | [管理和關閉專案](https://experienceleague.adobe.com/?recommended=Workfront-U-1-2022.2.planners) | 課程 | 現在您已瞭解如何建立並規劃專案，我們可以開始瞭解如何管理和關閉專案。 |
+| 2022 年 8 月 | [精進對於作為計劃者管理管理工作的認識 ](https://experienceleague.adobe.com/?recommended=Workfront-U-1-2022.3.planners) | 課程 | 您已瞭解建立、規劃和管理專案的基礎知識後，還有一些事情您應知道，以充分利用您的 Workfront。 |
 | 2022 年 8 月 | [開始使用適用於工作者的 Workfront](https://experienceleague.adobe.com/?recommended=Workfront-U-1-2022.1.workers) | 課程 | 本課程適用於已在 Adobe Workfront 取得工作授權，並收到工作或請求，與專案和文件團隊協作的使用者。 |
-| 2022 年 8 月 | [適用於協作者的 Adobe Workfront](https://experienceleague.adobe.com/?recommended=Workfront-U-1-2022.1.collaborators) | 課程 | 了解如何使用檢閱或請求授權，以輕鬆地在全新的 Workfront 體驗中請求、檢閱和協作工作、文件和校訂。 |
-| 2022 年 8 月 | [建立和管理自訂表單](https://experienceleague.adobe.com/?recommended=Workfront-A-1-2022.1.customforms) | 課程 | 在您的系統中建立自訂欄位，擷取您組織的獨特資訊。了解如何在 Workfront 內建立、共用和附加自訂表單。 |
-| 2022 年 8 月 | [Workfront 校訂 - 管理和設定](https://experienceleague.adobe.com/?recommended=Workfront-A-1-2022.3.proof) | 課程 | 了解如何調整校訂設定、自訂動作和報告，以及設定校訂工作流程。 |
-| 2022 年 8 月 | [Workfront 校訂 - 上傳校訂](https://experienceleague.adobe.com/?recommended=Workfront-U-1-2022.2.proof) | 課程 | 了解如何上傳要檢閱和核准的校訂。 |
-| 2022 年 8 月 | [Workfront 校訂 - 檢閱和核准工作](https://experienceleague.adobe.com/?recommended=Workfront-L-1-2022.1.proof) | 課程 | 了解如何作為檢閱者和核准者使用 Workfront 校訂。 |
-| 2022 年 8 月 | [基本報告元素](https://experienceleague.adobe.com/?recommended=Workfront-U-1-2022.1.reporting) | 課程 | 報告元素為在 Workfront 中所有清單報告中找到的篩選器、檢視和群組。了解這些元素有助於您建立自訂報告和行事曆。 |
+| 2022 年 8 月 | [適用於協作者的 Adobe Workfront](https://experienceleague.adobe.com/?recommended=Workfront-U-1-2022.1.collaborators) | 課程 | 瞭解如何使用檢閱或請求授權，以輕鬆地在全新的 Workfront 體驗中請求、檢閱和協作工作、文件和校訂。 |
+| 2022 年 8 月 | [建立和管理自訂表單](https://experienceleague.adobe.com/?recommended=Workfront-A-1-2022.1.customforms) | 課程 | 在您的系統中建立自訂欄位，擷取您組織的獨特資訊。瞭解如何在 Workfront 內建立、共用和附加自訂表單。 |
+| 2022 年 8 月 | [Workfront 校訂 - 管理和設定](https://experienceleague.adobe.com/?recommended=Workfront-A-1-2022.3.proof) | 課程 | 瞭解如何調整校訂設定、自訂動作和報告，以及設定校訂工作流程。 |
+| 2022 年 8 月 | [Workfront 校訂 - 上傳校訂](https://experienceleague.adobe.com/?recommended=Workfront-U-1-2022.2.proof) | 課程 | 瞭解如何上傳要檢閱和核准的校訂。 |
+| 2022 年 8 月 | [Workfront 校訂 - 檢閱和核准工作](https://experienceleague.adobe.com/?recommended=Workfront-L-1-2022.1.proof) | 課程 | 瞭解如何作為檢閱者和核准者使用 Workfront 校訂。 |
+| 2022 年 8 月 | [基本報告元素](https://experienceleague.adobe.com/?recommended=Workfront-U-1-2022.1.reporting) | 課程 | 報告元素為在 Workfront 中所有清單報告中找到的篩選器、檢視和群組。瞭解這些元素有助於您建立自訂報告和行事曆。 |
 | 2022 年 8 月 | [建立自訂行事曆](https://experienceleague.adobe.com/?recommended=Workfront-U-1-2022.4.reporting) | 課程 | 有了自訂行事曆，您可以使用行事曆格式直接顯示專案、工作和問題的日期和資訊。 |
-| 2022 年 8 月 | [建立自訂報告和儀表板](https://experienceleague.adobe.com/?recommended=Workfront-U-1-2022.3.reporting) | 課程 | 報告是一窺您資料的視窗。了解如何在 Workfront 中建立三種不同類型的報告，並在儀表板中使用報告。 |
-| 2022 年 8 月 | [建立中繼篩選器](https://experienceleague.adobe.com/?recommended=Workfront-U-1-2022.2.reporting) | 課程 | 更深入了解萬用字元、OR 篩選器和文字模式。開啟內建專案、工作和問題篩選器，並取得所發生事件的詳細資訊。 |
+| 2022 年 8 月 | [建立自訂報告和儀表板](https://experienceleague.adobe.com/?recommended=Workfront-U-1-2022.3.reporting) | 課程 | 報告是一窺您資料的視窗。瞭解如何在 Workfront 中建立三種不同類型的報告，並在儀表板中使用報告。 |
+| 2022 年 8 月 | [建立中繼篩選器](https://experienceleague.adobe.com/?recommended=Workfront-U-1-2022.2.reporting) | 課程 | 更深入瞭解萬用字元、OR 篩選器和文字模式。開啟內建專案、工作和問題篩選器，並取得所發生事件的詳細資訊。 |
 
 {style=&quot;table-layout:auto&quot;}
 
@@ -488,10 +488,10 @@ Last updated: **, 2022**
 
 | 已發佈 | 名稱 | 類型 | 說明 | 應用程式 |
 | -----------| ---------- | ---------- | ---------- |---------- |
-| 2022 年 8 月 | [全新的工作區體驗](https://experienceleague.adobe.com/docs/document-cloud-learn/acrobat-learning/getting-started/new-workspace.html) | 影片 | 了解您可以在 Acrobat 中啟用的全新工作區體驗，讓您在工具與檔案之間無縫切換。 | Adobe Acrobat |
-| 2022 年 8 月 | [設定線上付款](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/advanced-tasks/advanced-tasks-sending/set-up-online-payments.html?lang=zh-Hant) | 影片 | 了解如何設定和接受文件中的線上付款。 | Acrobat Sign |
-| 2022 年 8 月 | [使用印章簽名](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/getting-started/getting-started-signing/sign-with-a-stamp.html) | 影片 | 了解如何在簽名工作流程中使用印章，以標記文件已核准或完成。 | Acrobat Sign |
-| 2022 年 8 月 | [取得親筆簽名](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/getting-started/getting-started-signing/sign-in-person.html?lang=zh-Hant) | 影片 | 了解如何使用 [Acrobat Sign 行動應用程式](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/mobile/mobile-overview.html?lang=zh-Hant)取得別人的親筆簽名。 | Acrobat Sign |
+| 2022 年 8 月 | [全新的工作區體驗](https://experienceleague.adobe.com/docs/document-cloud-learn/acrobat-learning/getting-started/new-workspace.html) | 影片 | 瞭解您可以在 Acrobat 中啟用的全新工作區體驗，讓您在工具與檔案之間無縫切換。 | Adobe Acrobat |
+| 2022 年 8 月 | [設定線上付款](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/advanced-tasks/advanced-tasks-sending/set-up-online-payments.html?lang=zh-Hant) | 影片 | 瞭解如何設定和接受文件中的線上付款。 | Acrobat Sign |
+| 2022 年 8 月 | [使用印章簽名](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/getting-started/getting-started-signing/sign-with-a-stamp.html) | 影片 | 瞭解如何在簽名工作流程中使用印章，以標記文件已核准或完成。 | Acrobat Sign |
+| 2022 年 8 月 | [取得親筆簽名](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/getting-started/getting-started-signing/sign-in-person.html?lang=zh-Hant) | 影片 | 瞭解如何使用 [Acrobat Sign 行動應用程式](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/mobile/mobile-overview.html?lang=zh-Hant)取得別人的親筆簽名。 | Acrobat Sign |
 
 {style=&quot;table-layout:auto&quot;}
 
@@ -503,11 +503,11 @@ Last updated: **, 2022**
 
 ## ![圖示](/assets/creative-cloud-24.png) 適用於企業的 Adobe Creative Cloud {#creative-cloud}
 
-如需了解最新教學課程，請參閱「[適用於企業的 Creative Cloud 教學課程](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/overview.html?lang=zh-Hant)」。
+如需瞭解最新教學課程，請參閱「[適用於企業的 Creative Cloud 教學課程](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/overview.html?lang=zh-Hant)」。
 
 ## ![圖示](/assets/experience-league.png) 客戶資料管理 - 對話 {#voices}
 
-身為客戶資料管理技術和行銷實務主管和專家的您，[客戶資料管理對話](https://experienceleague.adobe.com/docs/customer-data-management-voices-events/events/overview.html?lang=zh-Hant)是您的最終目的地。此教學課程集合是您聆聽同行的意見、獲取靈感並了解 MarTech 中發展的一站式中心。不用報名，按一下即可觀看。
+身為客戶資料管理技術和行銷實務主管和專家的您，[客戶資料管理對話](https://experienceleague.adobe.com/docs/customer-data-management-voices-events/events/overview.html?lang=zh-Hant)是您的最終目的地。此教學課程集合是您聆聽同行的意見、獲取靈感並瞭解 MarTech 中發展的一站式中心。不用報名，按一下即可觀看。
 
 ## ![圖示](/assets/experience-league.png)數位體驗藍圖 {#blueprints}
 
