Updating Old File for core commit

--- a/c-legacy-releases/2022/05182022.md
+++ b/c-legacy-releases/2022/05182022.md
@@ -7,9 +7,9 @@ author: mfrei
 mini-toc-levels: 2
 exl-id: c25cdfc7-0e06-4179-867b-e5edd9e1b919
 source-git-commit: 9e3d82cbf800568ec36c6c60ddaa832347c05790
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '5070'
-ht-degree: 98%
+ht-degree: 100%
 
 ---
 
@@ -61,7 +61,7 @@ ht-degree: 98%
 | [詢問專家：Web SDK 基礎知識](https://www.youtube.com/watch?v=g0KajUfq-S4) | 網路研討會 | 了解並使用資料彙集最佳實務。<br>[時間表和過往活動](https://experienceleague.adobe.com/docs/experience-league-live-events/events/overview.html?lang=zh-Hant) |
 | [Adobe Campaign - 客戶成功網路研討會系列](https://peer2peerenhancecustomerjourney-ac-may2022.experienceleague.adobeevents.com/) | Peer2Peer：透過 Adobe Campaign 增強您的客戶歷程。 | 與 Streamotion 旗下 Kayo、Binge 和 Flash 品牌的 Engagement Operations 負責人 Anja Starun 一起參加這場 Peer2Peer 現場討論。直接從她聽取有關團隊使用 Adobe Campaign 建立個人化客戶歷程所實施的成功策略。<br>**日期：** 5 月 26 日下午 3 點 EST<br>[詳細資訊和報名](https://peer2peerenhancecustomerjourney-ac-may2022.experienceleague.adobeevents.com/) |
 | [Adobe Target 社群](https://experienceleaguecommunities.adobe.com/t5/adobe-target-discussions/at-community-q-amp-a-coffee-break-4-27-22-8am-pt-jim-mctiernan/m-p/446940#M3096) | 問答休息時間 | 加入 Adobe Target 產品團隊的 Brent Kostak 和 Drew Burns，他們會回答 Adobe Target 相關問題，包括共用受眾、Real-Time CDP、第一方資料、端對端個人化工作流程等。<br>觀看最近的[即時個人化網路研討會](https://experienceleaguecommunities.adobe.com:443/t5/adobe-target-discussions/webinar-recording-4-28-22-real-time-personalization-with-adobe/td-p/449012)，並在 Adobe Target 社群[問答休息時間對話串](https://adobe.ly/3MyiDHa)上向專家提交後續問題！<br>**日期：** 2022 年 5 月 25 日上午 8 點 PDT<br>[詳細資訊和報名](https://adobe.ly/3MyiDHa) |
-| [使用 Journey Optimizer 推送通知 - 如何輕鬆設定推送通知的行動應用程式](https://www.youtube.com/watch?v=t36Xjhukmro) | Experience League LIVE | 了解使用 Adobe Journey Optimizer 推送通知的常見使用案例，並深入了解如何設定由 Adobe Experience Platform 支援的推送應用程式的技術詳細資訊。<br>**日期：** 2022 年 5 月 12 日上午 9:30 PDT<br>[時間表和過去的活動](https://experienceleague.adobe.com/docs/experience-league-live-events/events/overview.html?lang=en) |
+| [使用 Journey Optimizer 推送通知 - 如何輕鬆設定推送通知的行動應用程式](https://www.youtube.com/watch?v=t36Xjhukmro) | Experience League LIVE | 了解使用 Adobe Journey Optimizer 推送通知的常見使用案例，並深入了解如何設定由 Adobe Experience Platform 支援的推送應用程式的技術詳細資訊。<br>**日期：** 2022 年 5 月 12 日上午 9:30 PDT<br>[時間表和過去的活動](https://experienceleague.adobe.com/docs/experience-league-live-events/events/overview.html?lang=zh-Hant) |
 | [Adobe [!DNL Developers Live]: Commerce](https://experienceleague.adobe.com/docs/adobe-developers-live-events/events/2022/feb2022/overview.html?lang=tw) | 隨選影片 | _Adobe Developers Live: Commerce 2022_ 匯集多元背景的開發人員和有經驗的建置者，其目的只有一個，就是創造令人驚艷的端對端體驗。此單日虛擬會議提供重要的 Commerce 和 Open Source 開發人員更新、技術研討會、社群交流機會等。 |
 | [Marketo 技能交流](https://experienceleague.adobe.com/docs/skill-exchange-events/events/marketo/aug2021/marketo-roadmap.html?lang=tw) | 隨選影片 | 了解 Marketo 藍圖的重要性以及如何避免規劃不周。在 2021 年 8 月 [!DNL Marketo] Marketo 技能交流 (現已上線到 Experience League 平台)，取得有關釋放方案會員自訂欄位潛力的建議、Marketo Engage 提示和技巧，以及更多。 |
 | [2022 年 Adobe Summit](https://business.adobe.com/summit/adobe-summit.html) | 隨選研討會 | 向 Adobe 高階主管 Ryan Reynolds、Walgreens Boots Alliance, Inc. 執行長 Rosalind Brewer、NIKE, Inc. 執行長 John Donahoe 以及美國紅十字會執行長 Gail J. McGovern 學習客戶體驗如何成為數位經濟的貨幣。<br>探索 2022 年 Adobe Summit 的[隨選研討會](https://business.adobe.com/summit/2022/sessions.html)。 |
@@ -83,7 +83,7 @@ Experience Cloud [中央介面元件](https://experienceleague.adobe.com/docs/co
 **更多有關 [!DNL Experience Cloud Central UI Components] 與管理的說明資源**
 
 * Experience Cloud 中央 UI 元件[版本注意事項](https://experienceleague.adobe.com/docs/core-services/interface/release-notes/release-notes.html?lang=zh-Hant)
-* Experience Cloud 的[使用者和產品管理](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html?lang=en) (管理)
+* Experience Cloud 的[使用者和產品管理](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html?lang=zh-Hant) (管理)
 * Places Service [版本注意事項](https://experienceleague.adobe.com/docs/places/using/release-notes.html?lang=zh-Hant)
 * [People - 客戶屬性和對象庫](https://experienceleague.adobe.com/docs/core-services/interface/services/core-services-landing.html?lang=zh-Hant)產品文件
 * [整合式搜尋物件和實體](https://experienceleague.adobe.com/docs/core-services/interface/services/search-experience-cloud.html?lang=zh-Hant)
@@ -281,7 +281,7 @@ Adobe 建議您造訪 [Experience Manager 版本更新與藍圖](https://experie
 | 2022 年 5 月 | [取得整合的登入權杖](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/cloud-5/cloud5-getting-login-token-integrations.html) | 影片 | 有關如何取得 Cloud Service 整合的登入權杖的深入指南，以及用於此操作的一些使用案例。 | AEM CS |
 | 2022 年 5 月 | [在浮動切換中顯示多個 pdf 文件](https://experienceleague.adobe.com/docs/experience-manager-learn/forms/document-services/display-pdf-in-carousel.html?lang=tw) | 影片 | 了解在提交表單之前將多個 PDF 文件顯示到表單填寫工具以供審核的常用案例。 | AEM Forms |
 | 2022 年 5 月 | [影像與 AEM Headless](https://experienceleague.adobe.com/docs/experience-manager-learn/getting-started-with-aem-headless/graphql/how-to/images.html) | 影片 | 了解如何利用影像開發豐富、極具吸引力的 AEM Headless 體驗等。 | AEM Headless |
-| 2022 年 5 月 | [RTF 文字與 AEM Headless](https://experienceleague.adobe.com/docs/experience-manager-learn/getting-started-with-aem-headless/graphql/how-to/localized-content.html) | 影片 | 了解如何使用多行文字欄位，一種可讓作者建立 RTF 文字內容的「內容片段」資料類型。 | AEM無頭 |
+| 2022 年 5 月 | [RTF 文字與 AEM Headless](https://experienceleague.adobe.com/docs/experience-manager-learn/getting-started-with-aem-headless/graphql/how-to/localized-content.html) | 影片 | 了解如何使用多行文字欄位，一種可讓作者建立 RTF 文字內容的「內容片段」資料類型。 | AEM Headless |
 | 2022 年 5 月 | [專用輸出 IP 位址](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/networking/dedicated-egress-ip-address.html) | 影片 | 了解如何設定及使用專用輸出 IP 位址，此位址允許來自 AEM 的輸出連線源自於專用 IP。 | AEM CS |
 | 2022 年 5 月 | [部署您的程式碼](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/using-cloud-manager/deploy-code.html) | 影片 | 了解如何在 AEM as a Cloud Service 中使用 Cloud Manager 管道來將程式碼部署到生產環境中。 | AEM CS、Cloud Manager |
 | 2022 年 5 月 | [停用後處理工作流程執行](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/manage/asset-microservices-configure-and-use.html#disable-post-processing-workflow-execution) | 文件 | 了解如何在不需要後處理時在「自動啟動工作流程」區段中建立空的工作流程模型。 | AEM CS |
@@ -313,7 +313,7 @@ Adobe 建議您造訪 [Experience Manager 版本更新與藍圖](https://experie
 * [Experience Manager 6.4 學習與支援首頁](https://experienceleague.adobe.com/docs/experience-manager-64.html)
 * [Experience Manager 6.3 學習與支援首頁](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/previous-updates/aem-previous-versions.html)
 * [Experience Manager 6.2 學習與支援首頁](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/previous-updates/aem-previous-versions.html?lang=zh-Hant#previous-updates)
-* [舊版 Experience Manager 文件](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/previous-updates/aem-previous-versions.html?lang=en#previous-updates)
+* [舊版 Experience Manager 文件](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/previous-updates/aem-previous-versions.html?lang=zh-Hant#previous-updates)
 * [Dynamic Media Classic 說明首頁](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/home.html?lang=zh-Hant)
 * [Experience Manager 文件：最近更新](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/doc-updates/documentation-updates.html?lang=zh-Hant#aem-as-a-cloud-service)
 
@@ -407,7 +407,7 @@ Experience League 上新發佈的影片活動：
 
 | 已發佈 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2022 年 5 月 | [Marketo 技能交流](https://experienceleague.adobe.com/docs/skill-exchange-events/events/marketo/aug2021/marketo-roadmap.html?lang=en) | 影片 | 首先了解您的 Marketo 藍圖。然後，探索將 Marketo 例項視為產品的重要性。在這部新發佈的 2021 年 8 月 [Marketo 技能交流](https://experienceleague.adobe.com/docs/skill-exchange-events/events/marketo/aug2021/marketo-roadmap.html?lang=en)影片 (現已上線到 Experience League 平台)，取得有關釋放方案會員自訂欄位潛力的建議、Marketo Engage 提示和技巧，以及更多。 |
+| 2022 年 5 月 | [Marketo 技能交流](https://experienceleague.adobe.com/docs/skill-exchange-events/events/marketo/aug2021/marketo-roadmap.html?lang=tw) | 影片 | 首先了解您的 Marketo 藍圖。然後，探索將 Marketo 例項視為產品的重要性。在這部新發佈的 2021 年 8 月 [Marketo 技能交流](https://experienceleague.adobe.com/docs/skill-exchange-events/events/marketo/aug2021/marketo-roadmap.html?lang=tw)影片 (現已上線到 Experience League 平台)，取得有關釋放方案會員自訂欄位潛力的建議、Marketo Engage 提示和技巧，以及更多。 |
 
 {style=&quot;table-layout:auto&quot;}
 
@@ -432,8 +432,8 @@ Adobe [!DNL Workfront] 是統一的工作管理應用程式，用於共用構想
 
 | 功能 | 說明 |
 | ------- | ----------- |
-| [!UICONTROL 自訂報告] | (5月31日；測試版功能)Advertising Cloud DSP現在可內嵌第一方區段，由客戶資料平台(CDP)內建的已驗證訊號組成。 |
-| 最佳化目標 | （5月25日）視訊和原生刊登版位現在可包含在具有自訂目標的套件中 [!UICONTROL 最高ROAS] 和 [!UICONTROL 最低CPA]. |
+| [!UICONTROL 自訂報告] | (5 月 31 日；Beta 功能) Advertising Cloud DSP 現在可以擷取第一方區段 (由客戶資料平台 (CDP) 內建立的已驗證訊號所組成)。 |
+| 最佳化目標 | (5 月 25 日) 影片和原生位置現在可以包含在具有自訂目標[!UICONTROL 最高 ROAS]和[!UICONTROL 最低 CPA]的套件中。 |
 
 {style=&quot;table-layout:auto&quot;}
 
@@ -445,7 +445,7 @@ Adobe [!DNL Workfront] 是統一的工作管理應用程式，用於共用構想
 | ------- | ----------- |
 | [!UICONTROL 行銷活動] | 以下 Beta 版功能可供所有廣告商使用：<ul><li>([!DNL Microsoft® Advertising] 帳戶) 為您在 [!DNL Microsoft® Audience Network] 上的現有原生廣告行銷活動提供同步、唯讀可見度和報告 (包括瀏覽資料) 支援，其中也包括 [!DNL Microsoft® Audience Ads]。</li><li>([!DNL Google Ads] 和 [!DNL Microsoft® Advertising] 帳戶) 能夠從「[!UICONTROL 搜尋] > [!UICONTROL 工具] > [!UICONTROL 匯入行銷活動 Beta]」將您的 [!DNL Google Ads] 行銷活動和行銷活動結構匯入 [!DNL Microsoft® Advertising]。<br><br>匯入行銷活動後，您可以檢查匯入工作的狀態、檢閱任何錯誤記錄檔，以及編輯、暫停或刪除匯入排程。</li></ul> |
 | [!UICONTROL 行銷活動]<br><br>[!UICONTROL 專案組合] | ([!DNL Microsoft® Advertising] 行銷活動) 以下競標策略適用於所有用戶：<ul><li>[!UICONTROL 目標印象份額]：您可以使用此策略設定行銷活動，並可選擇設定目標印象份額、目標廣告位置和最高每次點按成本。警告：混合專案組合尚不支援此選項，因此無法將其新增到標準專案組合中。</li><li>[!UICONTROL 最大化點按次數]：您可以使用此策略設定行銷活動，並可選擇設定目標最高每次點按成本。您可以在標準或混合投資組合中加入採用此策略的行銷活動。若要在混合組合中使用此策略，組合的目標必須僅包含 [!DNL Adobe] 屬性 (量度)，並且您必須啟用將 Advertising Cloud Search 目標上傳到 [!DNL Microsoft® Ads]。</li></ul> |
-| 與 Adobe Analytics 整合 | （5月7日）在Advertising Cloud傳送至的資料摘要中 [!DNL Analytics]，資料 [!DNL Google Ads] 自2022年5月7日起，動態搜尋廣告的可用範圍僅限於廣告群組層級。 |
+| 與 Adobe Analytics 整合 | (5 月 7 日) 在 Advertising Cloud 傳送給 [!DNL Analytics] 的資料摘要中，適用於 [!DNL Google Ads] 動態搜尋廣告的資料自 2022 年 5 月 7 日起僅可用於廣告群組層級。 |
 
 {style=&quot;table-layout:auto&quot;}
 
@@ -458,7 +458,7 @@ Adobe [!DNL Workfront] 是統一的工作管理應用程式，用於共用構想
 | 2022 年 5 月 | [共用帳戶存取權](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/admin-set-up/advanced-tasks-admins/share-account-access.html) | 影片 | 了解如何設定對其他使用者帳戶中交易的僅限檢視權限。 | [!DNL Acrobat Sign] |
 | 2022 年 5 月 | [管理文件範本](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/advanced-tasks/advanced-tasks-managing/edit-a-template.html?lang=tw) | 影片 | 了解如何編輯或刪除資料庫中的範本。 | [!DNL Acrobat Sign] |
 | 2022 年 5 月 | [在 Microsoft® Power Automate 中建立第一個流程](https://experienceleague.adobe.com/docs/document-services/tutorials/pdfservices/create-workflow-power-automate.html?lang=tw) | 文章 | 了解如何使用 Adobe PDF Services 連接器在 Microsoft® Power Automate 中建立第一個流程。 | Document Services |
-| 2022 年 5 月 | [取得 Microsoft® Power Automate 的認證](https://experienceleague.adobe.com/docs/document-services/tutorials/pdfservices/getting-credentials-power-automate.html?lang=tw) | 文章 | 了解如何取得認證，以開始使用或試用 Adobe PDF Services。根據您是試用版用戶還是現有客戶，本教學課程將逐步解說取得認證的正確步驟。 | 檔案服務 |
+| 2022 年 5 月 | [取得 Microsoft® Power Automate 的認證](https://experienceleague.adobe.com/docs/document-services/tutorials/pdfservices/getting-credentials-power-automate.html?lang=tw) | 文章 | 了解如何取得認證，以開始使用或試用 Adobe PDF Services。根據您是試用版用戶還是現有客戶，本教學課程將逐步解說取得認證的正確步驟。 | Document Services |
 
 {style=&quot;table-layout:auto&quot;}
 
